# icebug-format

./: GENERATING_GRAPHS.md  README.md  convert_csr.py  icebug-format.py  pyproject.toml  scan.py
.github/workflows/: ci.yml
doc/: spec.md
format/icebug-disk/: spec.md
format/icebug-memory/: spec.md
icebug_format/: __init__.py  cli.py  graphar.py  memory.py
tests/: test_cli.py  test_memory.py
