[project]
name = "icebug-format"
version = "1.0.0"
description = "Convert graph data from relational formats to icebug format."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.3.2",
    "pyarrow>=21.0.0",
]

[project.optional-dependencies]
graphar = [
    "graphar",
]

[project.scripts]
icebug-format = "icebug_format:main"

[project.urls]
Homepage = "https://github.com/Ladybug-Memory/icebug-format"
Repository = "https://github.com/Ladybug-Memory/icebug-format"
PyPI = "https://pypi.org/project/icebug-format"

[tool.setuptools.packages.find]
include = ["icebug_format*"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=7.2",
]

[tool.uv]
package = true
